fix: Windows audio support + cross-platform player improvements
- Use 'where' instead of 'command -v' on Windows for player detection
- Add PowerShell + WPF MediaPlayer fallback for headless Windows playback
- Add exec-based playback with windowsHide for no GUI windows
- Cache which() results to avoid redundant execSync calls
- Clamp volume to 0-1 range
- Remove unused recent() function
- Bump to v1.4.0

--- a/package.json
+++ b/package.json
@@ -1,13 +1,23 @@
 {
   "name": "myinstants-mcp",
-  "version": "1.3.0",
+  "version": "1.4.0",
   "type": "module",
   "description": "MCP server for myinstants.com — search and play millions of sound buttons",
   "bin": {
     "myinstants-mcp": "server.js"
   },
-  "files": ["server.js"],
-  "keywords": ["mcp", "sound", "myinstants", "soundboard", "ai", "agent", "model-context-protocol"],
+  "files": [
+    "server.js"
+  ],
+  "keywords": [
+    "mcp",
+    "sound",
+    "myinstants",
+    "soundboard",
+    "ai",
+    "agent",
+    "model-context-protocol"
+  ],
   "repository": {
     "type": "git",
     "url": "https://github.com/austenstone/myinstants-mcp"
